api to create ingredients
