# pkg/api/types.go
@@ -9,3 +9,14 @@ type User struct {
 	LastName  string `json:"lastName"`
 	Email     string `json:"email"`
 }
+
+type IngredientCrudResponse struct {
+	IsCreated bool `json:"isCreated"`
+	IsUpdated bool `json:"isUpdated"`
+	IsDeleted bool `json:"isDeleted"`
+}
+
+type ErrorResponse struct {
+	Code  int    `json:"code"`
+	Error string `json:"error"`
+}
